Fix spacing issues in blog posts

--- a/src/components/app.css
+++ b/src/components/app.css
@@ -1,3 +1,4 @@
+/* carousel */
 .slidecontainer {
   display: block;
   margin: 0;
@@ -7,20 +8,13 @@
 .imageslide {
   max-width:100%;
   height: auto;
-    /* min-height: 0;
-    width: 95%; */
-    
-    margin: 0;
-    /*overflow: hidden; */
-    /* width: 95%;
-    height: auto;
-    margin: 0; */
-  }
+  margin: 0;
+}
 
 .imageslidecaption {
   text-align: center;
   display: block;
-  height: 2.25em;
+  height: 3.75em;
 }
 
 .slidecontrols {
@@ -65,6 +59,8 @@
   width: 100%;
   text-align: center;
   font-style: italic;
+  margin-top: -1.45rem;
+  margin-bottom: 1.45rem;
 }
 
 .navgrid {
